--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.addForm input{
+  border-color:black;
+  text-align: center;
+  background-color: antiquewhite;
+  padding: 5px;
+  margin-bottom: 5px;
+  width: 100%;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.addForm input{
+  
+}
+.addForm button{
+  width:102%;
+  margin-bottom: 5px;
+}
+.addForm button:hover{
+  background-color: lightgreen;
+}
+/* Here we have all the editing related to the itemList file */
+.list{
+  align-items: center;
+  align-content: center;
+  width: 102%;
+  display: grid;
+}
+.list button{
+  padding: 10px 30px ;
+  margin-left:80%;
+  margin-top:-13px;
+  outline: auto;
+  border:2px solid 4px; 
+  border-radius: 10px;
+}
+.list button:hover{
+  background-color: red;
+}
+/*Here we will have all the editing related to the searchItem*/
+.searchForm input{
+  padding:5px;
+  text-align: center;
+  margin-bottom:2px;
+  width: 100%;
 }
