--- a/src/index.css
+++ b/src/index.css
@@ -1,43 +1,57 @@
-.addForm input{
-  border-color:black;
-  text-align: center;
-  background-color: antiquewhite;
-  padding: 5px;
-  margin-bottom: 5px;
-  width: 100%;
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+  font-family:sans-serif;
 }
-.addForm input{
-  
-}
-.addForm button{
-  width:102%;
-  margin-bottom: 5px;
-}
-.addForm button:hover{
-  background-color: lightgreen;
-}
-/* Here we have all the editing related to the itemList file */
-.list{
+
+.app{
+  display:flex;
+  flex-direction:column;
+  justify-content: center;
   align-items: center;
-  align-content: center;
-  width: 102%;
-  display: grid;
 }
-.list button{
-  padding: 10px 30px ;
-  margin-left:80%;
-  margin-top:-13px;
-  outline: auto;
-  border:2px solid 4px; 
-  border-radius: 10px;
+/* Editing the inputItem field */
+.addItem{
+  align-self: stretch;
+  padding: 5vh;
+  margin-bottom: 4px;
+  background: linear-gradient(to bottom, red, rgb(255, 255, 255));
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
-.list button:hover{
-  background-color: red;
+.addForm{
+  display: flex;
+  flex-direction: column;
 }
-/*Here we will have all the editing related to the searchItem*/
-.searchForm input{
-  padding:5px;
-  text-align: center;
-  margin-bottom:2px;
-  width: 100%;
+.addForm > label {
+  flex-basis:6vw;
+  max-height: 7vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.addForm > label > input{
+  padding:1vw;
+  flex-grow:2;
+  flex-shrink:1;
+}
+.addForm > label > button{
+  flex-grow:1;
+padding:0.8vw;
+  flex-shrink:2;
+}
+.searchForm{
+  
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-self: stretch;
+}
+.searchForm > input{
+  align-self: center;
+  padding:.8vw;
+  flex-basis:40px;
 }
