--- a/src/index.css
+++ b/src/index.css
@@ -4,19 +4,27 @@
   box-sizing: border-box;
   font-family:sans-serif;
 }
-
+#root{
+  height:100vh;
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items:flex-start;
+}
 .app{
+  flex-basis:100%;
+  height: 100vh;
+  align-self:flex-start;
   display:flex;
   flex-direction:column;
-  justify-content: center;
   align-items: center;
+  background:linear-gradient(to bottom, rgb(237, 130, 130), rgba(182, 8, 37, 0.756));
 }
 /* Editing the inputItem field */
 .addItem{
   align-self: stretch;
   padding: 5vh;
   margin-bottom: 4px;
-  background: linear-gradient(to bottom, red, rgb(255, 255, 255));
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -44,7 +52,6 @@ padding:0.8vw;
   flex-shrink:2;
 }
 .searchForm{
-  
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -54,4 +61,48 @@ padding:0.8vw;
   align-self: center;
   padding:.8vw;
   flex-basis:40px;
+}
+main{
+  overflow-y:scroll;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+/* Here we are editing list of tasks */
+main > div{
+  width: 50vw;
+  overflow-y:scroll;
+  display: flex;
+  flex-direction:column;
+  align-items: flex-end;
+  /* overflow-x:scroll; */
+}
+main > div > nav{
+  margin:4px;
+  border:4px solid rgb(167, 125, 125);
+  align-self: stretch;
+  font-size: large;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: inherit;
+}
+main > div > nav > input[type='checkbox']{
+  min-width: 4vmax;
+  min-height:4vmax;
+  width:4vmax;
+  height:4vmax;
+}
+/* Here we are editing the delete button */
+main > div > nav > button{
+  background-color: antiquewhite;
+  border-radius: 10%;
+  border-width:0;
+  padding:1vw;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight:bold;
+}
+main > div > nav > button:hover{
+  background-color: rgba(18, 144, 22, 0.372);  
 }
