--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,31 @@
-*{
-  margin:0;
-  padding:0;
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  font-family:sans-serif;
+  font-family: sans-serif;
 }
-#root{
-  height:100vh;
-  display:flex;
+#root {
+  height: 100vh;
+  display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items:flex-start;
+  align-items: flex-start;
 }
-.app{
-  flex-basis:100%;
+.app {
+  flex-basis: 100%;
   height: 100vh;
-  align-self:flex-start;
-  display:flex;
-  flex-direction:column;
+  align-self: flex-start;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  background:linear-gradient(to bottom, rgb(237, 130, 130), rgba(182, 8, 37, 0.756));
+  background: linear-gradient(
+    to bottom,
+    rgb(237, 130, 130),
+    rgba(182, 8, 37, 0.756)
+  );
 }
 /* Editing the inputItem field */
-.addItem{
+.addItem {
   align-self: stretch;
   padding: 5vh;
   margin-bottom: 4px;
@@ -30,64 +34,64 @@
   justify-content: center;
   align-items: center;
 }
-.addForm{
+.addForm {
   display: flex;
   flex-direction: column;
 }
 .addForm > label {
-  flex-basis:6vw;
+  flex-basis: 6vw;
   max-height: 7vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.addForm > label > input{
-  text-align:center;
-  border-radius:4px;
+.addForm > label > input {
+  text-align: center;
+  border-radius: 4px;
   box-shadow: none;
-  padding:1vw;
-  flex-grow:2;
-  flex-shrink:1;
+  padding: 1vw;
+  flex-grow: 2;
+  flex-shrink: 1;
 }
-.addForm > label > button{
-  border-radius:4px;
+.addForm > label > button {
+  border-radius: 4px;
   box-shadow: none;
-  margin-top:2px;
-  flex-grow:1;
-  padding:0.8vw;
-  flex-shrink:2;
+  margin-top: 2px;
+  flex-grow: 1;
+  padding: 0.8vw;
+  flex-shrink: 2;
 }
-.searchForm{
+.searchForm {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   align-self: stretch;
 }
-.searchForm > input{
-  text-align:center;
+.searchForm > input {
+  text-align: center;
   align-self: center;
-  padding:.8vw;
-  flex-basis:40px;
+  padding: 0.8vw;
+  flex-basis: 40px;
 }
-main{
-  overflow-y:scroll;
-  display:flex;
+main {
+  overflow-y: scroll;
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
 }
 /* Here we are editing list of tasks */
-main > div{
+main > div {
   width: 50vw;
-  overflow-y:scroll;
+  overflow-y: scroll;
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
   align-items: flex-end;
   /* overflow-x:scroll; */
 }
-main > div > nav{
-  margin:4px;
-  border:4px solid rgb(167, 125, 125);
+main > div > nav {
+  margin: 4px;
+  border: 4px solid rgb(167, 125, 125);
   align-self: stretch;
   font-size: large;
   display: flex;
@@ -95,21 +99,21 @@ main > div > nav{
   align-items: center;
   background-color: inherit;
 }
-main > div > nav > input[type='checkbox']{
+main > div > nav > input[type="checkbox"] {
   min-width: 4vmax;
-  min-height:4vmax;
-  width:4vmax;
-  height:4vmax;
+  min-height: 4vmax;
+  width: 4vmax;
+  height: 4vmax;
 }
 /* Here we are editing the delete button */
-main > div > nav > button{
+main > div > nav > button {
   background-color: antiquewhite;
   border-radius: 10%;
-  border-width:0;
-  padding:1vw;
-  font-family: 'Courier New', Courier, monospace;
-  font-weight:bold;
+  border-width: 0;
+  padding: 1vw;
+  font-family: "Courier New", Courier, monospace;
+  font-weight: bold;
 }
-main > div > nav > button:hover{
-  background-color: rgba(18, 144, 22, 0.372);  
+main > div > nav > button:hover {
+  background-color: rgba(18, 144, 22, 0.372);
 }
