--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,11 @@
   flex-grow: 1;
   padding: 0.8vw;
   flex-shrink: 2;
+  transition:background,color 500ms, 500ms ease;
+}
+.addForm > label > button:hover{
+  background-color: greenyellow;
+  color:blue;
 }
 .searchForm {
   display: flex;
@@ -113,7 +118,9 @@ main > div > nav > button {
   padding: 1vw;
   font-family: "Courier New", Courier, monospace;
   font-weight: bold;
+  transition:background,color 500ms ease 50ms;
 }
 main > div > nav > button:hover {
   background-color: rgba(18, 144, 22, 0.372);
+  color:white;
 }
