--- a/src/index.css
+++ b/src/index.css
@@ -79,21 +79,19 @@
   flex-basis: 40px;
 }
 main {
-  min-width: 50vw;
-  justify-self: flex-end;
   overflow-y: scroll;
-  display: flex;
-  flex-direction: column;
+  clip-path: inset(5px 25px 15px 0px);
 }
 /* Here we are editing list of tasks */
 main > div {
+  margin-top:4px;
   overflow-y: scroll;
   display: flex;
+  overflow-x: scroll;
   flex-direction: column;
   align-items: flex-end;
 }
 main > div > nav {
-  /* height: 10vh; */
   padding: 2vh;
   margin: 4px;
   align-self: stretch;
@@ -107,7 +105,7 @@ main > div > nav {
   transition-timing-function: ease;
   transition-delay:100ms;
 }
-main > div > nav > input[type="checkbox"] {
+.MuiCheckbox-root{
   min-width: 4vmax;
   min-height: 4vmax;
   width: 4vmax;
