Made some changes for the mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -81,6 +81,7 @@
 main {
   overflow-y: scroll;
   clip-path: inset(5px 25px 15px 0px);
+  
 }
 /* Here we are editing list of tasks */
 main > div {
@@ -124,4 +125,9 @@ main > div > nav > button {
 main > div > nav > button:hover {
   background-color: rgba(18, 144, 22, 0.372);
   color:white;
+}
+@media (max-width:1000px) {
+  main{
+    clip-path: none;
+  }
 }
