--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,6 @@
 .app {
   flex-basis: 100%;
   height: 100vh;
-  align-self: flex-start;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -79,16 +78,14 @@
   flex-basis: 40px;
 }
 main {
-  overflow-y: scroll;
-  clip-path: inset(5px 25px 15px 0px);
-  
+  overflow-y:scroll;
+  clip-path: inset(0px 15px 0px 0px);
 }
 /* Here we are editing list of tasks */
 main > div {
+  /* overflow-y: scroll; */
   margin-top:4px;
-  overflow-y: scroll;
   display: flex;
-  overflow-x: scroll;
   flex-direction: column;
   align-items: flex-end;
 }
@@ -126,7 +123,7 @@ main > div > nav > button:hover {
   background-color: rgba(18, 144, 22, 0.372);
   color:white;
 }
-@media (max-width:1000px) {
+@media (max-width:500px) {
   main{
     clip-path: none;
   }
