--- a/src/index.css
+++ b/src/index.css
@@ -79,18 +79,17 @@
 }
 main {
   overflow-y:scroll;
-  clip-path: inset(0px 15px 0px 0px);
+  clip-path: inset(0px .5vw 0px 0px);
 }
 /* Here we are editing list of tasks */
 main > div {
-  /* overflow-y: scroll; */
   margin-top:4px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
 }
 main > div > nav {
-  padding: 2vh;
+  padding: 1.5vmin;
   margin: 4px;
   align-self: stretch;
   font-size: large;
@@ -102,12 +101,6 @@ main > div > nav {
   transition-duration:500ms;
   transition-timing-function: ease;
   transition-delay:100ms;
-}
-.MuiCheckbox-root{
-  min-width: 4vmax;
-  min-height: 4vmax;
-  width: 4vmax;
-  height: 4vmax;
 }
 /* Here we are editing the delete button */
 main > div > nav > button {
