--- a/src/index.css
+++ b/src/index.css
@@ -69,13 +69,9 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  align-self: stretch;
-}
-.searchForm > input {
-  text-align: center;
-  align-self: center;
-  padding: 0.8vw;
-  flex-basis: 40px;
+  border: 2px solid rgba(40, 52, 41, 0.372);
+  border-radius: 5px;
+
 }
 main {
   overflow-y:scroll;
