Made the full working webpage using the local storage

--- a/src/index.css
+++ b/src/index.css
@@ -113,8 +113,8 @@
   color: white;
 }
 
-@media (max-height: 500px) {
+@media (max-width: 1000px) {
   .addItem {
-    padding: 15vh;
+    margin-top: 5vh;
   }
 }
